# dlp-test

./: .gitignore  01_Explore_Raw_Data.ipynb  02_Clean_Raw_Data.ipynb  03_Explore_Clean_Data.ipynb  04_Feature_Selection.ipynb  05_Train_Model.ipynb  README.md  pyproject.toml  requirements.txt  solution.ipynb  solution.py  solution_2.ipynb
.ipynb_checkpoints/: 01_Explore_Raw_Data-checkpoint.ipynb  02_Clean_Raw_Data-checkpoint.ipynb  03_Explore_Clean_Data-checkpoint.ipynb  04_Feature_Selection-checkpoint.ipynb  05_Train_Model-checkpoint.ipynb  README-checkpoint.md  solution-checkpoint.ipynb  solution_2-checkpoint.ipynb
eda/: eda_engine.py
etl/: data_loader.py
models/: XGBRegressorModel.json
openhouse/eda/: eda_engine.py
openhouse/encoding/: data_encoder.py
openhouse/etl/: data_loader.py
